--- a/app/styles/parts/_graph.scss
+++ b/app/styles/parts/_graph.scss
@@ -147,3 +147,7 @@ svg {
   }
   
 }
+
+.map-editor {
+  display:block;
+}
